--- a/pdftoimg.ipynb
+++ b/pdftoimg.ipynb
@@ -2,59 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pdf2image\n",
-      "  Downloading pdf2image-1.17.0-py3-none-any.whl (11 kB)\n",
-      "Requirement already satisfied: pillow in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pdf2image) (10.2.0)\n",
-      "Installing collected packages: pdf2image\n",
-      "Successfully installed pdf2image-1.17.0\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pytesseract in /home/ubuntu/.local/lib/python3.10/site-packages (0.3.10)\n",
+      "Requirement already satisfied: Pillow>=8.0.0 in /usr/lib/python3/dist-packages (from pytesseract) (9.0.1)\n",
+      "Requirement already satisfied: packaging>=21.3 in /home/ubuntu/.local/lib/python3.10/site-packages (from pytesseract) (24.0)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting PyMuPDF\n",
+      "  Downloading PyMuPDF-1.24.2-cp310-none-manylinux2014_x86_64.whl (3.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.5/3.5 MB\u001b[0m \u001b[31m361.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting PyMuPDFb==1.24.1\n",
+      "  Downloading PyMuPDFb-1.24.1-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (30.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m30.8/30.8 MB\u001b[0m \u001b[31m287.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:03\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: PyMuPDFb, PyMuPDF\n",
+      "Successfully installed PyMuPDF-1.24.2 PyMuPDFb-1.24.1\n"
      ]
     }
    ],
    "source": [
-    "pip install pytesseract\n",
-    "pip install PyMuPDF\n"
+    "!pip install pytesseract\n",
+    "!pip install PyMuPDF\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting opencv-python\n",
+      "  Downloading opencv_python-4.9.0.80-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (62.2 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.2/62.2 MB\u001b[0m \u001b[31m335.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:06\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.17.3 in /home/ubuntu/.local/lib/python3.10/site-packages (from opencv-python) (1.26.4)\n",
+      "Installing collected packages: opencv-python\n",
+      "Successfully installed opencv-python-4.9.0.80\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fitz\n",
     "import pytesseract\n",
-    "\n",
+    "import cv2\n",
     "# Open the PDF\n",
-    "pdf_doc = fitz.open(\"./pdf/test.pdf\")\n",
+    "pdf_doc = fitz.open(\"./pdf/grammar_tj.pdf\")\n",
+    "# open new text file to write the text\n",
+    "outfile = open('./txt/grammar_tj.txt', 'w')\n",
     "\n",
-    "# Choose a page number (0-based indexing)\n",
-    "start_page = 2\n",
-    "last_page = pdf_doc.page_count\n",
-    "for i in range(start_page, last_page):\n",
+    "#last_page = pdf_doc.page_count\n",
+    "for page in pdf_doc:\n",
     "    try:\n",
     "        # Render the page as an image\n",
-    "        page = pdf_doc.load_page(i)\n",
-    "        pix = page.get_pixmap()\n",
+    "        pix = page.get_pixmap(dpi=250)\n",
     "        # Save the image\n",
-    "        pix.save(f'./img/image_{i}.png')\n",
-    "        text = pytesseract.image_to_string(f'./img/image_{i}.png', lang=\"tgk\")\n",
+    "        imgFile = f'./img/image_{page.number}.jpeg'\n",
+    "        pix.save(imgFile)\n",
+    "        img = cv2.imread(imgFile, cv2.IMREAD_GRAYSCALE)\n",
+    "        #_,th3 = cv2.threshold(img,137,255,cv2.THRESH_BINARY)\n",
+    "        th3 = cv2.adaptiveThreshold(img,255,cv2.ADAPTIVE_THRESH_GAUSSIAN_C,cv2.THRESH_BINARY,11,6)\n",
+    "        \n",
+    "        cv2.imwrite(imgFile, th3)\n",
+    "        text = pytesseract.image_to_string(imgFile, lang=\"tgk\")\n",
     "    \n",
-    "        with open(f'./txt/test_{i}.txt', \"w\") as file:\n",
-    "            file.write(text)\n",
+    "        outfile.write(text)\n",
+    "        outfile.write(\"\\n\")\n",
+    "        #if page.number == 2:\n",
+    "         #   break\n",
     "    except IOError as e:\n",
     "        print(\"An error occurred while saving the file:\", e)\n",
-    "\n"
+    "\n",
+    "outfile.close()\n",
+    "pdf_doc.close()"
    ]
   }
  ],
@@ -74,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
